refactor: some code improvements include

--- a/src/index.html
+++ b/src/index.html
@@ -60,25 +60,8 @@
             <section class="homeSection" id="homeSection">
                 <div class="homeSectionLeftWrapper">
                     <img src="./assets/background/bg-rectangle.svg" alt="bg-rectangle" class="homeSectionLeftWrapperBg">
-                    <div class="homeSectionLeftWrapperBoxContant">
-                        <h1>A GREAT APP MAKES YOUR LIFE BETTERS</h1>
-                        <p class="gray-paragraphs">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-                            sint. Velit officia
-                            consequat
-                            duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
-                        </p>
-                        <div>
-                            <h2>DOWNLOAD APP NOW</h2>
-                            <div>
-                                <a href="#">
-                                    <img src="./assets/apps/play-store-app copy.svg" alt="">
-                                </a>
-                                <a href="#">
-                                    <img src="./assets/apps/apple-store-app.svg" alt="">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+                    <img src="./assets/background/homeImgIntroduction.png" alt=""
+                        class="homeSectionLeftWrapperBoxContant">
                 </div>
                 <div class="homeSectionRigthWrapper">
                     <img src="./assets/background/mobile-app-mockup.svg" alt="mobile-app-mockup">
@@ -159,33 +142,33 @@
                 </span>
 
                 <div class="featuresSectionAppInterface">
-                    <div class="featuresSectionAppInterfaceSurfacesTextBox text-box1">
+                    <div class="featuresSectionAppInterfaceSurfacesTextBox text-box1 box">
                         <img src="./assets/icons/comment-icon.svg" alt="comment-icon">
                         <h4>FULL FREE CHAT</h4>
                         <p class="white-paragraphs">Lorem ipsum dolor sit amet, consectetur <br>adipiscing elit.</p>
                     </div>
-                    <div class="featuresSectionAppInterfaceLeftSideTextBox text-box2">
+                    <div class="featuresSectionAppInterfaceLeftSideTextBox text-box2 box">
                         <img src="./assets/icons/browser-icon.svg" alt="browser-icon-icon">
                         <h4>UNLIMITER FEATURES</h4>
                         <p class="white-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </div>
                     <img src="./assets/background/app-interface.png" alt="app-interface" class="text-box3">
-                    <div class="featuresSectionAppInterfaceRigthSideTextBox text-box4">
+                    <div class="featuresSectionAppInterfaceRigthSideTextBox text-box4 box">
                         <img src="./assets/icons/cell-phone-icon.svg" alt="cell-phone-icon">
                         <h4>ISO & ANDROID VERSION</h4>
                         <p class="white-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </div>
-                    <div class="featuresSectionAppInterfaceLeftSideTextBox text-box5">
+                    <div class="featuresSectionAppInterfaceLeftSideTextBox text-box5 box">
                         <img src="./assets/icons/vector-icon.svg" alt="vector-phone-icon">
                         <h4>AWSOME UI DESIGN</h4>
                         <p class="white-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </div>
-                    <div class="featuresSectionAppInterfaceRigthSideTextBox text-box6">
+                    <div class="featuresSectionAppInterfaceRigthSideTextBox text-box6  box">
                         <img src="./assets/icons/eye-scanner-icon.svg" alt="eye-scanner-phone-icon">
                         <h4>RETINA READY GRAPHICS</h4>
                         <p class="white-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </div>
-                    <div class="featuresSectionAppInterfaceSurfacesTextBox text-box7">
+                    <div class="featuresSectionAppInterfaceSurfacesTextBox text-box7 box">
                         <img src="./assets/icons/telemarket-icon.svg" alt="telemarket-icon">
                         <h4>24/7 SUPORT BY REAL PEOPLE</h4>
                         <p class="white-paragraphs">Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit.</p>
