feat: header mobile menu  semi-include

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -40,22 +40,36 @@
                 </div>
             </div>
             <div class="headerBottomWrapper">
+                <img src="./assets/icons/menu-line.svg" alt="menu-line" class="menuLine" id="menuLine">
                 <span>
                     <a href="#homeSection" class="headerBottomWrapperNavBarButton">HOME</a>
                     <a href="#aboutSection" class="headerBottomWrapperNavBarButton">ABOUT</a>
                     <a href="#featuresSection" class="headerBottomWrapperNavBarButton">FEATURES</a>
                 </span>
-                <a href="#" class="headerBottomWrapperApollyButton">
-                    <img src="./assets/icons/logo.svg" alt="">
-                </a>
+                <div class="headerBottomWrapperApollyButton">
+                    <a href="#appInterfaceSection">
+                        <img src="./assets/icons/logo.svg" alt="logo-img">
+                    </a>
+                </div>
                 <span>
-                    <a href="#" class="headerBottomWrapperNavBarButton">SCREENSHOT</a>
-                    <a href="#" class="headerBottomWrapperNavBarButton">BLOG</a>
-                    <a href="#" class="headerBottomWrapperNavBarDownloadButton">DOWNLOAD</a>
+                    <a href="#ourHappyCostumersSection" class="headerBottomWrapperNavBarButton">SCREENSHOT</a>
+                    <a href="#ourRecentBlogSection" class="headerBottomWrapperNavBarButton">BLOG</a>
+                    <div class="headerBottomWrapperNavBarDownloadButton">
+                        <a href="#">DOWNLOAD</a>
+                    </div>
                 </span>
             </div>
         </header>
 
+        <div class="unactivatedHambugerMenuWrapperButtons" id="mobileMenuWrapper">
+            <div class="activatedHambugerMenuWrapperButtons">
+                <a href="#homeSection">HOME</a>
+                <a href="#aboutSection">ABOUT</a>
+                <a href="#featuresSection">FEATURES</a>
+                <a href="#ourHappyCostumersSection">SCREENSHOT</a>
+                <a href="#ourRecentBlogSection">BLOG</a>
+            </div>
+        </div>
         <main>
             <section class="homeSection" id="homeSection">
                 <div class="homeSectionLeftWrapper">
@@ -175,7 +189,7 @@
                     </div>
                 </div>
             </section>
-            <section class="appInterfaceSection">
+            <section class="appInterfaceSection" id="appInterfaceSection">
                 <div class="appInterfaceSectionHeader">
                     <h1>CHECKOUT OUR APP INTERFACE LOOK</h1>
                     <br><br>
@@ -249,7 +263,7 @@
                     </div>
                 </div>
             </section>
-            <section class="howToUseSection">
+            <section class="howToUseSection" id="howToUseSection">
                 <main>
                     <h1>HOW TO USE THE APP PERFECTLY</h1>
                     <br>
@@ -259,7 +273,7 @@
                 </main>
                 <img src="./assets/background/notbook-bg-img.svg" alt="notbook-bg">
             </section>
-            <section class="ourTeamSection">
+            <section class="ourTeamSection" id="ourTeamSection">
                 <span>
                     <h1>OUR REATIVE TEAM</h1>
                     <br><br>
@@ -356,7 +370,7 @@
                     </div>
                 </main>
             </section>
-            <section class="ourHappyCostumersSection">
+            <section class="ourHappyCostumersSection" id="ourHappyCostumersSection">
                 <span>
                     <h1>OUR HAPPY COSTUMERS</h1>
                     <br><br>
@@ -438,7 +452,7 @@
                     <div class="swiper-pagination"></div>
                 </div>
             </section>
-            <section class="ourRecentBlogSection">
+            <section class="ourRecentBlogSection" id="ourRecentBlogSection">
                 <span>
                     <h1>OUR RECENT BLOG</h1>
                     <br><br>
@@ -500,94 +514,94 @@
                     </a>
                 </main>
             </section>
-
-            <footer>
-                <div class="footerTopWrapper">
-                    <div class="footerTopWrapperLeftTextBox">
-                        <span>
-                            <img src="./assets/icons/mail-fill.svg" alt="mail-fill">
-                        </span>
-                        <p>info@youremail.com</p>
-                    </div>
-                    <hr>
-                    <div class="footerTopWrapperRigthTextBox">
-                        <span>
-                            <img src="./assets/icons/phone-fill.svg" alt="mail-fill">
-                        </span>
-                        <p>+880 321 655 9985</p>
-                    </div>
-                </div>
-                <div class="footerMainWrapper">
-                    <div class="footerMainWrapperLinksContainer">
-                        <div class="footerBottomWrapperLogoArea">
-                            <span>
-                                <h2>LOGO</h2>
-                                <br>
-                                <p class="white-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                    Viverra
-                                    nunc ante velit vitae. Est tellus vitae, nullam lobortis enim.
-                                </p>
-                            </span>
-                            <div class="footerBottomWrapperLogoAreaIcons">
-                                <a href="#">
-                                    <img src="./assets/icons/purple-facebook-fill.svg" alt="purple-facebook-fill">
-                                </a>
-                                <hr>
-                                <a href="#">
-                                    <img src="./assets/icons/instagram-fill.svg" alt="instagram-fill">
-                                </a>
-                                <hr>
-                                <a href="#">
-                                    <img src="./assets/icons/twitter-fill.svg" alt="twitter-fill">
-                                </a>
-                                <hr>
-                                <a href="#">
-                                    <img src="./assets/icons/youtube-fill.svg" alt="youtube-fill">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="footerBottomWrapperLinksArea">
-                            <h2>QUICK LINK</h2>
-                            <br>
-                            <div>
-                                <span>
-                                    <a href="#aboutSection">About</a>
-                                </span>
-                                <span>
-                                    <a href="#featuresSection">Features</a>
-                                </span>
-                                <span>
-                                    <a href="#screenshotSection">Screenshot</a>
-                                </span>
-                                <span>
-                                    <a href="#blogSection">Blog</a>
-                                </span>
-                            </div>
-                        </div>
-                        <div class="footerBottomWrapperNewsLetterArea">
-                            <form action="">
-                                <h2>NEWS LETTER</h2>
-                                <p class="white-paragraphs">Subscribe our newsletter to get our latest
-                                    update & news
-                                </p>
-                                <div class="newsLetterInput">
-                                    <input type="text" name="" id="" placeholder="Your email adress">
-                                    <button type="submit"><img src="./assets/icons/send-fill.svg"
-                                            alt="send-fill"></button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                    <span class="footerBottomWrapper">
-                        <hr>
-                        <p class="white-paragraphs">Made whith ❤️ by Pedro Henrique Costa</p>
-                    </span>
-                </div>
-            </footer>
         </main>
+
+        <footer>
+            <div class="footerTopWrapper">
+                <div class="footerTopWrapperLeftTextBox">
+                    <span>
+                        <img src="./assets/icons/mail-fill.svg" alt="mail-fill">
+                    </span>
+                    <p>info@youremail.com</p>
+                </div>
+                <hr>
+                <div class="footerTopWrapperRigthTextBox">
+                    <span>
+                        <img src="./assets/icons/phone-fill.svg" alt="mail-fill">
+                    </span>
+                    <p>+880 321 655 9985</p>
+                </div>
+            </div>
+            <div class="footerMainWrapper">
+                <div class="footerMainWrapperLinksContainer">
+                    <div class="footerBottomWrapperLogoArea">
+                        <span>
+                            <h2>LOGO</h2>
+                            <br>
+                            <p class="white-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Viverra
+                                nunc ante velit vitae. Est tellus vitae, nullam lobortis enim.
+                            </p>
+                        </span>
+                        <div class="footerBottomWrapperLogoAreaIcons">
+                            <a href="#">
+                                <img src="./assets/icons/purple-facebook-fill.svg" alt="purple-facebook-fill">
+                            </a>
+                            <hr>
+                            <a href="#">
+                                <img src="./assets/icons/instagram-fill.svg" alt="instagram-fill">
+                            </a>
+                            <hr>
+                            <a href="#">
+                                <img src="./assets/icons/twitter-fill.svg" alt="twitter-fill">
+                            </a>
+                            <hr>
+                            <a href="#">
+                                <img src="./assets/icons/youtube-fill.svg" alt="youtube-fill">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="footerBottomWrapperLinksArea">
+                        <h2>QUICK LINK</h2>
+                        <br>
+                        <div>
+                            <span>
+                                <a href="#aboutSection">About</a>
+                            </span>
+                            <span>
+                                <a href="#featuresSection">Features</a>
+                            </span>
+                            <span>
+                                <a href="#screenshotSection">Screenshot</a>
+                            </span>
+                            <span>
+                                <a href="#blogSection">Blog</a>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="footerBottomWrapperNewsLetterArea">
+                        <form action="">
+                            <h2>NEWS LETTER</h2>
+                            <p class="white-paragraphs">Subscribe our newsletter to get our latest
+                                update & news
+                            </p>
+                            <div class="newsLetterInput">
+                                <input type="text" name="" id="" placeholder="Your email adress">
+                                <button type="submit"><img src="./assets/icons/send-fill.svg" alt="send-fill"></button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <span class="footerBottomWrapper">
+                    <hr>
+                    <p class="white-paragraphs">Made whith ❤️ by Pedro Henrique Costa</p>
+                </span>
+            </div>
+        </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
         <script src="./js/swiperScript.js"></script>
+        <script src="./js/hambugerMenuWrapperScript.js"></script>
 </body>
 
 </html>
